--- a/pages/10270.html
+++ b/pages/10270.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -342,6 +342,18 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/charge+conjugation+matrix'>charge conjugation matrix</a>, <a class='existingWikiWord' href='/nlab/show/Fierz+identity'>Fierz identity</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>real spin representation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+conjugate'>Dirac conjugate</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+spinor'>Dirac spinor</a>, <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>Weyl spinor</a>, <a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>Majorana spinor</a></p>
+</li>
 </ul>
 </li>
 
@@ -359,6 +371,14 @@ margin-left: 0em;
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/index'>index theory</a>, <a class='existingWikiWord' href='/nlab/show/K-theory'>K-theory</a></li>
 </ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+equation'>Dirac equation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a></p>
 </li>
 </ul>
 
@@ -390,14 +410,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on August 29, 2013 17:36:31 
+  Revised on November  4, 2017 12:44:34 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.130.26)
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/higher+spin+geometry+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/higher+spin+geometry+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/higher+spin+geometry+-+contents/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/higher+spin+geometry+-+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/higher+spin+geometry+-+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
