--- a/pages/17738.html
+++ b/pages/17738.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -605,6 +605,18 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/charge+conjugation+matrix'>charge conjugation matrix</a>, <a class='existingWikiWord' href='/nlab/show/Fierz+identity'>Fierz identity</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>real spin representation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+conjugate'>Dirac conjugate</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+spinor'>Dirac spinor</a>, <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>Weyl spinor</a>, <a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>Majorana spinor</a></p>
+</li>
 </ul>
 </li>
 
@@ -622,6 +634,14 @@ margin-left: 0em;
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/index'>index theory</a>, <a class='existingWikiWord' href='/nlab/show/K-theory'>K-theory</a></li>
 </ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+equation'>Dirac equation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a></p>
 </li>
 </ul>
 
@@ -666,11 +686,19 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>Weyl spinor</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>Majorana spinor</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+conjugate'>Dirac conjugate</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+operator'>Dirac operator</a>, <a class='existingWikiWord' href='/nlab/show/Dirac+equation'>Dirac equation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>Weyl spinor</a>, <a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>Majorana spinor</a></p>
 </li>
 </ul>
 
@@ -694,14 +722,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on October 27, 2016 10:04:03 
+  Revised on November  4, 2017 12:41:38 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.209.183)
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dirac+spinor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Dirac+spinor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac+spinor/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Dirac+spinor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac+spinor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
