--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,142 +308,22 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='num_defn' id='PresymplecticCurrentDiracField'>
-<h6 id='definition'>Definition</h6>
+    <p><math class='maruku-mathml' display='inline' id='mathml_80143f1f75b38e95de739e80bf820eade763167c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
-<p><strong>(<a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a> and <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a> of <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a>)</strong></p>
+<p>Diagonal arrows: <math class='maruku-mathml' display='inline' id='mathml_80143f1f75b38e95de739e80bf820eade763167c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mo>↗</mo></mtd> <mtd><mo>↘</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>\array{\nearrow &amp; \searrow}</annotation></semantics></math></p>
 
-<p>Consider the <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> of the <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a> on <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> of <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>+</mo><mn>1</mn><mo>∈</mo><mo stretchy='false'>{</mo><mn>3</mn><mo>,</mo><mn>4</mn><mo>,</mo><mn>6</mn><mo>,</mo><mn>10</mn><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>p + 1 \in \{3,4,6,10\}</annotation></semantics></math> (example \ref{LagrangianDensityForDiracField}).</p>
-
-<p>Then</p>
-
-<ul>
-<li>
-<p>the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+complex'>Euler-Lagrange variational derivative</a> in the case of vanishing <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> is</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>δ</mi> <mi>EL</mi></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mn>2</mn><mi>i</mi><mspace width='thinmathspace'></mspace><mover><mrow><mi>δ</mi><mi>ψ</mi></mrow><mo>¯</mo></mover><mspace width='thinmathspace'></mspace><msup><mi>γ</mi> <mi>μ</mi></msup><mspace width='thinmathspace'></mspace><msub><mi>ψ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow></msub><mspace width='thinmathspace'></mspace><mo>∧</mo><msub><mi>dvol</mi> <mi>Σ</mi></msub></mrow><annotation encoding='application/x-tex'>
-  \delta_{EL} \mathbf{L}
-  \;=\;
-  2 i\,
-  \overline{\delta \psi}
-  \,\gamma^\mu\, \psi_{,\mu}
-  \,  
-  \wedge dvol_\Sigma
-
-</annotation></semantics></math></div>
-<p>and in the case that <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> is <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>+</mo><mn>1</mn><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>p +1 = 4</annotation></semantics></math> and arbitrary <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>m\in \mathbb{R}</annotation></semantics></math>, it is</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>δ</mi> <mi>EL</mi></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mrow><mo>(</mo><mover><mrow><mi>δ</mi><mi>ψ</mi></mrow><mo>¯</mo></mover><mrow><mo>(</mo><mi>i</mi><msup><mi>γ</mi> <mi>μ</mi></msup><msub><mi>ψ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow></msub><mo>+</mo><mi>m</mi><mi>ψ</mi><mo>)</mo></mrow><mo>+</mo><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>i</mi><msup><mi>γ</mi> <mi>μ</mi></msup><mover><mrow><msub><mi>ψ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow></msub></mrow><mo>¯</mo></mover><mo>+</mo><mi>m</mi><mover><mi>ψ</mi><mo>¯</mo></mover><mo>)</mo></mrow><mo stretchy='false'>(</mo><mi>δ</mi><mi>ψ</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><msub><mi>dvol</mi> <mi>Σ</mi></msub></mrow><annotation encoding='application/x-tex'>
-  \delta_{EL} \mathbf{L}
-   \;=\;
-   \left( 
-     \overline{\delta \psi}
-     \left(
-    i \gamma^\mu \psi_{,\mu} + m \psi
-     \right)
-     +
-     \left(
-    - i \gamma^\mu\overline{\psi_{,\mu}} + m \overline{\psi}
-     \right)
-     (\delta \psi)
-   \right)
-   \,
-   dvol_\Sigma
-
-</annotation></semantics></math></div></li>
-
-<li>
-<p>its <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a> is</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Ω</mi> <mi>BFV</mi></msub><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mover><mi>ψ</mi><mo>¯</mo></mover><mspace width='thinmathspace'></mspace><msup><mi>γ</mi> <mi>μ</mi></msup><mspace width='thinmathspace'></mspace><mi>ψ</mi><mspace width='thinmathspace'></mspace><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub></mrow><annotation encoding='application/x-tex'>
-  \Omega_{BFV}
-  \;=\;
-  \overline{\psi}\,\gamma^\mu \,\psi \, \iota_{\partial_\mu} dvol_\Sigma
-
-</annotation></semantics></math></div></li>
-</ul>
-</div>
-
-<div class='proof'>
-<h6 id='proof'>Proof</h6>
-
-<p>In any case the <a class='existingWikiWord' href='/nlab/show/canonical+momentum'>canonical momentum</a> of the <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a> according to example \ref{CanonicalMomentum} is</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><msubsup><mi>p</mi> <mi>μ</mi> <mi>α</mi></msubsup></mtd> <mtd><mo>≔</mo><mfrac><mo>∂</mo><mrow><mo>∂</mo><msubsup><mi>ψ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>α</mi></msubsup></mrow></mfrac><mrow><mo>(</mo><mi>i</mi><mover><mi>ψ</mi><mo>¯</mo></mover><mspace width='thinmathspace'></mspace><msup><mi>γ</mi> <mi>ν</mi></msup><mspace width='thinmathspace'></mspace><msub><mi>ψ</mi> <mrow><mo>,</mo><mi>ν</mi></mrow></msub><mo>+</mo><mi>m</mi><mover><mi>ψ</mi><mo>¯</mo></mover><mi>ψ</mi><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msup><mover><mi>ψ</mi><mo>¯</mo></mover> <mi>β</mi></msup><mo stretchy='false'>(</mo><msup><mi>γ</mi> <mi>μ</mi></msup><msub><mo stretchy='false'>)</mo> <mi>β</mi></msub><msup><mrow></mrow> <mi>α</mi></msup></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  \begin{aligned}
-    p^\alpha_\mu
-    &amp; \coloneqq
-    \frac{\partial }{\partial \psi^\alpha_{,\mu}}
-    \left(
-      i \overline {\psi} \, \gamma^\nu \, \psi_{,\nu}
-      + 
-      m \overline{\psi} \psi
-    \right)
-    \\
-    &amp; =
-    \overline{\psi}^\beta (\gamma^\mu)_\beta{}^\alpha 
-  \end{aligned}
-
-</annotation></semantics></math></div>
-<p>This yields the <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a> as claimed, by example \ref{CanonicalMomentum}.</p>
-
-<p>Now regarding the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, first consider the massless case in spacetime dimension <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>+</mo><mn>1</mn><mo>∈</mo><mo stretchy='false'>{</mo><mn>3</mn><mo>,</mo><mn>4</mn><mo>,</mo><mn>6</mn><mo>,</mo><mn>10</mn><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>p+1 \in \{3,4,6,10\}</annotation></semantics></math>, where</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mi>i</mi><mover><mi>ψ</mi><mo>¯</mo></mover><mspace width='thinmathspace'></mspace><msup><mi>γ</mi> <mi>μ</mi></msup><mspace width='thinmathspace'></mspace><msub><mi>ψ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  L
-  \;=\;
-  i \overline{\psi} \, \gamma^\mu \, \psi_{,\mu}
-  \,.
-
-</annotation></semantics></math></div>
-<p>Then we compute as follows:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><msub><mi>δ</mi> <mi>EL</mi></msub><mi>L</mi></mtd> <mtd><mo>=</mo><mi>i</mi><mspace width='thinmathspace'></mspace><mover><mrow><mi>δ</mi><mi>ψ</mi></mrow><mo>¯</mo></mover><mspace width='thinmathspace'></mspace><msup><mi>γ</mi> <mi>μ</mi></msup><mspace width='thinmathspace'></mspace><msub><mi>ψ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow></msub><munder><munder><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>i</mi><mover><mrow><msub><mi>ψ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow></msub></mrow><mo>¯</mo></mover><mspace width='thinmathspace'></mspace><msup><mi>γ</mi> <mi>μ</mi></msup><mspace width='thinmathspace'></mspace><mi>δ</mi><mi>ψ</mi></mrow><mo>⏟</mo></munder><mrow><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><mi>i</mi><mspace width='thinmathspace'></mspace><mover><mrow><mi>δ</mi><mi>ψ</mi></mrow><mo>¯</mo></mover><mspace width='thinmathspace'></mspace><msup><mi>γ</mi> <mi>μ</mi></msup><mspace width='thinmathspace'></mspace><msub><mi>ψ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow></msub></mrow></munder></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mn>2</mn><mi>i</mi><mspace width='thinmathspace'></mspace><mover><mrow><mi>δ</mi><mi>ψ</mi></mrow><mo>¯</mo></mover><mspace width='thinmathspace'></mspace><msup><mi>γ</mi> <mi>μ</mi></msup><mspace width='thinmathspace'></mspace><msub><mi>ψ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow></msub></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  \begin{aligned}
-    \delta_{EL} L
-    &amp; =
-    i \,\overline{\delta \psi} \, \gamma^\mu \, \psi_{,\mu}
-    \underset{
-      = +
-      i \,\overline{\delta \psi} \, \gamma^\mu \, \psi_{,\mu}
-    }{
-    \underbrace{
-    -
-    i \overline{\psi_{,\mu}} \, \gamma^\mu \, \delta \psi
-    }
-    }
-    \\
-    &amp; =
-    2 i \, \overline{\delta \psi} \, \gamma^\mu \, \psi_{,\mu}
-  \end{aligned}
-
-</annotation></semantics></math></div>
-<p>Here the first equation is the general formula (eq:EulerLagrangeEquationGeneral) for the Euler-Lagrange variation, while the identity under the braces combines two facts:</p>
-
-<ol>
-<li>
-<p>the <a class='existingWikiWord' href='/nlab/show/bilinear+form'>bilinear form</a> <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><mo>¯</mo></mover><msup><mi>γ</mi> <mi>μ</mi></msup><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\overline{(-)}\gamma^\mu(-)</annotation></semantics></math> is symmetric (…)</p>
-</li>
-
-<li>
-<p>the spinor field coordinate functions anti-commute according to (eq:DiracFieldJetCoordinatesAnticommute).</p>
-</li>
-</ol>
-
-<p>Finally in the special case of the massive Dirac field in spacetime dimension <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>+</mo><mn>1</mn><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>p+1 = 4</annotation></semantics></math> the Lagrangian function is</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mi>i</mi><mspace width='thinmathspace'></mspace><mover><mi>ψ</mi><mo>¯</mo></mover><msup><mi>γ</mi> <mi>μ</mi></msup><msub><mi>ψ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow></msub><mo>+</mo><mi>m</mi><mover><mi>ψ</mi><mo>¯</mo></mover><mi>ψ</mi></mrow><annotation encoding='application/x-tex'>
-  L
-  \;=\;
-  i \, \overline{\psi} \gamma^\mu \psi_{,\mu} + m \overline{\psi}\psi
-
-</annotation></semantics></math></div>
-<p>where now <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ψ</mi> <mi>α</mi></msub></mrow><annotation encoding='application/x-tex'>\psi_\alpha</annotation></semantics></math> takes values in the <a class='existingWikiWord' href='/nlab/show/complex+number'>complex numbers</a> <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{C}</annotation></semantics></math> (as opposed to in <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_18' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℍ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{H}</annotation></semantics></math> or <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_19' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝕆</mi></mrow><annotation encoding='application/x-tex'>\mathbb{O}</annotation></semantics></math>). Therefore we may now form the <a class='existingWikiWord' href='/nlab/show/derivative'>derivative</a> equivalently by treeating <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_20' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ψ</mi></mrow><annotation encoding='application/x-tex'>\psi</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_9894929f5405afbca53f6adb060b678c5df21830_21' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>ψ</mi><mo>¯</mo></mover></mrow><annotation encoding='application/x-tex'>\overline{\psi}</annotation></semantics></math> as independent components of the field. This immediately yields the claim.</p>
-</div>
+<p><math class='maruku-mathml' display='inline' id='mathml_80143f1f75b38e95de739e80bf820eade763167c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 </div>
 
 <div class="revisedby">
-  Revised on November  3, 2017 17:55:16 
+  Revised on November  4, 2017 12:48:59 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1202" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1202 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1203" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1203 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
