--- a/pages/18684.html
+++ b/pages/18684.html
@@ -308,7 +308,135 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>The <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a> encoded by a <a class='existingWikiWord' href='/nlab/show/Dirac+operator'>Dirac operator</a>.</p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='spin_geometry'>Spin geometry</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/spin+geometry'>spin geometry</a></strong>, <strong><a class='existingWikiWord' href='/nlab/show/string+geometry'>string geometry</a></strong>, <strong><a class='existingWikiWord' href='/nlab/show/fivebrane+geometry'>fivebrane geometry</a></strong> …</p>
+
+<h2 id='ingredients'>Ingredients</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/higher+differential+geometry'>higher differential geometry</a></p>
+</li>
+</ul>
+
+<h2 id='spin_geometry_2'>Spin geometry</h2>
+
+<p><a class='existingWikiWord' href='/nlab/show/spin+geometry'>spin geometry</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spin+group'>spin group</a>, <a class='existingWikiWord' href='/nlab/show/spin%5Ec'>spin^c group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spin+representation'>spin representation</a>,</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a>, <a class='existingWikiWord' href='/nlab/show/fermion'>fermion</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/charge+conjugation+matrix'>charge conjugation matrix</a>, <a class='existingWikiWord' href='/nlab/show/Fierz+identity'>Fierz identity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>real spin representation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+conjugate'>Dirac conjugate</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+spinor'>Dirac spinor</a>, <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>Weyl spinor</a>, <a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>Majorana spinor</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spin+structure'>spin structure</a>, <a class='existingWikiWord' href='/nlab/show/spin%5Ec+structure'>spin^c structure</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+operator'>Dirac operator</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/index'>index theory</a>, <a class='existingWikiWord' href='/nlab/show/K-theory'>K-theory</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+equation'>Dirac equation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a></p>
+</li>
+</ul>
+
+<h2 id='string_geometry'>String geometry</h2>
+
+<p><a class='existingWikiWord' href='/nlab/show/string+geometry'>string geometry</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/string+2-group'>string 2-group</a>, <a class='existingWikiWord' href='/nlab/show/string%5Ec+2-group'>string^c 2-group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/string+structure'>string structure</a>, <a class='existingWikiWord' href='/nlab/show/string%5Ec+2-group'>string^c structure</a></p>
+</li>
+</ul>
+
+<h2 id='fivebrane_geometry'>Fivebrane geometry</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fivebrane+6-group'>fivebrane 6-group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fivebrane+structure'>fivebrane structure</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>The <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a> encoded by a <a class='existingWikiWord' href='/nlab/show/Dirac+operator'>Dirac operator</a>.</p>
+
+<p>The <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equations of motion</a> of the <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a>.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+spinor'>Dirac spinor</a>, <a class='existingWikiWord' href='/nlab/show/Dirac+conjugate'>Dirac conjugate</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a></p>
+</li>
+</ul>
 
 <h2 id='references'>References</h2>
 
@@ -321,14 +449,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on October 16, 2017 07:09:09 
+  Revised on November  4, 2017 12:43:14 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.50.90)
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dirac+equation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Dirac+equation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac+equation/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Dirac+equation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac+equation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
