--- a/pages/18745.html
+++ b/pages/18745.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,7 +308,21 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>For the moment see at <em><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+supersymmetry'>geometry of physics -- supersymmetry</a></em>: <a href='geometry+of+physics+--+supersymmetry#DiracConjugate'>this def.</a></p>
+    <h2 id='idea'>Idea</h2>
+
+<p>For the moment see at <em><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+supersymmetry'>geometry of physics -- supersymmetry</a></em>: <a href='geometry+of+physics+--+supersymmetry#DiracConjugate'>this def.</a></p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+spinor'>Dirac spinor</a>, <a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>Majorana spinor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a></p>
+</li>
+</ul>
 
 <p>
 </p>
@@ -319,14 +333,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November  3, 2017 18:21:33 
+  Revised on November  4, 2017 12:37:55 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dirac+conjugate" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Dirac+conjugate" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac+conjugate/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Dirac+conjugate" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac+conjugate" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
