--- a/pages/4308.html
+++ b/pages/4308.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -349,6 +349,18 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/charge+conjugation+matrix'>charge conjugation matrix</a>, <a class='existingWikiWord' href='/nlab/show/Fierz+identity'>Fierz identity</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>real spin representation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+conjugate'>Dirac conjugate</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+spinor'>Dirac spinor</a>, <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>Weyl spinor</a>, <a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>Majorana spinor</a></p>
+</li>
 </ul>
 </li>
 
@@ -366,6 +378,14 @@ margin-left: 0em;
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/index'>index theory</a>, <a class='existingWikiWord' href='/nlab/show/K-theory'>K-theory</a></li>
 </ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+equation'>Dirac equation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a></p>
 </li>
 </ul>
 
@@ -408,7 +428,7 @@ margin-left: 0em;
 
 <h3 id='spinstatistics_theorem'>Spin-Statistics theorem</h3>
 
-<p>By the <a class='existingWikiWord' href='/nlab/show/spin-statistics+theorem'>spin-statistics theorem</a>, the spin of any <a class='existingWikiWord' href='/nlab/show/fundamental+particle'>elementary particle</a> must be (in magnitude) half of an <a class='existingWikiWord' href='/nlab/show/integer'>integer</a> multiple of <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a> (<math class='maruku-mathml' display='inline' id='mathml_c9016b54fa3e641a6c9b209bc8618765c1de842b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℏ</mi><mo>=</mo><mi>h</mi><mo stretchy='false'>/</mo><mn>2</mn><mi>π</mi></mrow><annotation encoding='application/x-tex'>\hbar = h/2\pi</annotation></semantics></math>), an integer if the particle is a <a class='existingWikiWord' href='/nlab/show/boson'>boson</a> but only a half-integer if the particle is a <a class='existingWikiWord' href='/nlab/show/fermion'>fermion</a>.</p>
+<p>By the <a class='existingWikiWord' href='/nlab/show/spin-statistics+theorem'>spin-statistics theorem</a>, the spin of any <a class='existingWikiWord' href='/nlab/show/fundamental+particle'>elementary particle</a> must be (in magnitude) half of an <a class='existingWikiWord' href='/nlab/show/integer'>integer</a> multiple of <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a> (<math class='maruku-mathml' display='inline' id='mathml_b9b79bcb67c04926df5bd70402c8f2e3ad1744e0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℏ</mi><mo>=</mo><mi>h</mi><mo stretchy='false'>/</mo><mn>2</mn><mi>π</mi></mrow><annotation encoding='application/x-tex'>\hbar = h/2\pi</annotation></semantics></math>), an integer if the particle is a <a class='existingWikiWord' href='/nlab/show/boson'>boson</a> but only a half-integer if the particle is a <a class='existingWikiWord' href='/nlab/show/fermion'>fermion</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -427,6 +447,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+spinor'>Dirac spinor</a>, <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>Weyl spinor</a>, <a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>Majorana spinor</a></p>
 </li>
 
 <li>
@@ -452,14 +476,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  4, 2017 08:18:49 
+  Revised on November  4, 2017 12:37:23 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/spin" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/spin/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/spin" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/spin" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/spin" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/spin/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/spin" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/spin" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
