--- a/pages/9237.html
+++ b/pages/9237.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -310,11 +310,11 @@ margin-left: 0em;
 <div id="revision">
     <ul>
 <li>
-<p><a href='http://pages.bangor.ac.uk/~mas019'>Link at Bangor</a></p>
+<p><a href='http://lambe.mssrc.com'>Link at MSSRC</a></p>
 </li>
 
 <li>
-<p><a href='http://pages.bangor.ac.uk/~mas019/nsc/nsc.html'>Notes on symbolic computation</a></p>
+<p>[Notes on symbolic computation] ( being revised and extended )</p>
 </li>
 </ul>
 
@@ -322,14 +322,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on January 24, 2013 14:13:11 
-  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
-  (95.147.236.228)
+  Revised on November  4, 2017 12:26:04 
+  by <span class="newWikiWord">llambe@acm.org<a href="/nlab/new/llambe%40acm.org">?</a></span>
+  (2602:306:3b39:78c0:26be:5ff:fe05:cc37)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Larry+Lambe" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Larry+Lambe" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Larry+Lambe/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Larry+Lambe" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Larry+Lambe" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
